--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -6,7 +6,7 @@
       "name": "SVM.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOWbqM5LtnHYYq0M9gjI7tg",
+      "authorship_tag": "ABX9TyM0Ecw6M/Qt/+nkWF/gMswX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "Tp7B_N7Fk_KR",
-        "outputId": "0fd49e02-4d19-44fb-e6f5-bc5293508a95",
+        "outputId": "eb68e076-c6e2-46d0-cfbe-994c6806ca07",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 238
@@ -48,14 +48,21 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
+        "from sklearn import preprocessing\n",
+        "\n",
         "%matplotlib inline\n",
         "\n",
-        "irisdata = pd.read_csv(\"https://archive.ics.uci.edu/ml/machine-learning-databases/iris/iris.data\")\n",
+        "irisdata = pd.read_csv(\"https://archive.ics.uci.edu/ml/machine-learning-databases/lung-cancer/lung-cancer.data\")\n",
         "\n",
         "irisdata.shape\n",
+        "irisdata.head()\n",
         "\n",
-        "X = irisdata.drop('Iris-setosa', axis=1)\n",
-        "y = irisdata['Iris-setosa']\n",
+        "\n",
+        "le = preprocessing.LabelEncoder()\n",
+        "irisdata = irisdata.apply(le.fit_transform)\n",
+        "    \n",
+        "X = irisdata.drop('1', axis=1)\n",
+        "y = irisdata['1']\n",
         "\n",
         "from sklearn.model_selection import train_test_split\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.20)\n",
@@ -70,23 +77,23 @@
         "print(confusion_matrix(y_test,y_pred))\n",
         "print(classification_report(y_test,y_pred))"
       ],
-      "execution_count": 7,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[[ 7  0  0]\n",
-            " [ 0  7  1]\n",
-            " [ 0  0 15]]\n",
-            "                 precision    recall  f1-score   support\n",
+            "[[1 1 0]\n",
+            " [2 0 0]\n",
+            " [0 1 2]]\n",
+            "              precision    recall  f1-score   support\n",
             "\n",
-            "    Iris-setosa       1.00      1.00      1.00         7\n",
-            "Iris-versicolor       1.00      0.88      0.93         8\n",
-            " Iris-virginica       0.94      1.00      0.97        15\n",
+            "           0       0.33      0.50      0.40         2\n",
+            "           1       0.00      0.00      0.00         2\n",
+            "           2       1.00      0.67      0.80         3\n",
             "\n",
-            "       accuracy                           0.97        30\n",
-            "      macro avg       0.98      0.96      0.97        30\n",
-            "   weighted avg       0.97      0.97      0.97        30\n",
+            "    accuracy                           0.43         7\n",
+            "   macro avg       0.44      0.39      0.40         7\n",
+            "weighted avg       0.52      0.43      0.46         7\n",
             "\n"
           ],
           "name": "stdout"
